<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/cd_bottom_sheet"
    android:background="@drawable/connected_display_dialog_bg"
    android:paddingTop="@dimen/dialog_top_padding"
    android:paddingBottom="@dimen/dialog_bottom_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dialog_side_padding">
    <ImageView
        android:id="@+id/connected_display_dialog_icon"
        android:background="@drawable/circular_background"
        android:padding="6dp"
        android:layout_width="@dimen/connected_display_dialog_logo_size"
        android:layout_height="@dimen/connected_display_dialog_logo_size"
        android:src="@drawable/stat_sys_connected_display"
        android:tint="?android:^attr-private/materialColorOnSecondary"
        android:importantForAccessibility="no"
        android:backgroundTint="?android:^attr-private/materialColorSecondary"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.Title"
        android:gravity="center"
        android:id="@+id/connected_display_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connected_display_dialog_start_mirroring"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.Body"
        android:gravity="center"
        android:id="@+id/dual_display_warning"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connected_display_dialog_dual_display_stop_warning"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_dialog"
            style="@style/Widget.Dialog.Button.BorderButton"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/enable_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror_display"
            style="@style/Widget.Dialog.Button"/>
    </LinearLayout>
</LinearLayout>
