<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/rear_display_overlay_animation_background_color"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp">
        <com.android.systemui.reardisplay.RearDisplayEducationLottieViewWrapper
            android:layout_gravity="center"
            android:id="@+id/rear_display_folded_animation"
            android:layout_width="@dimen/rear_display_animation_width"
            android:layout_height="@dimen/rear_display_animation_height"
            android:scaleType="fitXY"
            android:contentDescription="@string/rear_display_accessibility_folded_animation"
            android:importantForAccessibility="no"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/rear_display_folded"
            app:lottie_repeatMode="reverse"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.Title"
        android:gravity="center"
        android:id="@+id/rear_display_title_text_view"
        android:paddingTop="@dimen/rear_display_title_top_padding"
        android:paddingBottom="@dimen/rear_display_title_bottom_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rear_display_folded_bottom_sheet_title"
        android:lineSpacingExtra="2sp"/>
    <TextView
        android:textAppearance="@style/TextAppearance.Dialog.Body"
        android:gravity="top|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rear_display_folded_bottom_sheet_description"
        android:lineSpacingExtra="2sp"
        android:translationY="-1.24sp"/>
</LinearLayout>
