<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:layout_width="380dp"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:gravity="center"
                android:id="@+id/log_access_image_view"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_doc_document"/>
            <TextView
                android:textAppearance="@style/AllowLogAccess"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:id="@+id/log_access_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/log_access_confirmation_title"/>
            <TextView
                android:textAppearance="@style/PrimaryAllowLogAccess"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:id="@+id/log_access_dialog_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/log_access_confirmation_body"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textAppearance="@style/PermissionGrantButtonTextAppearance"
            android:gravity="center"
            android:id="@+id/log_access_dialog_allow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/log_access_confirmation_allow"
            android:clipToOutline="true"
            style="?attr/permissionGrantButtonTopStyle"/>
        <Button
            android:textAppearance="@style/PermissionGrantButtonTextAppearance"
            android:gravity="center"
            android:id="@+id/log_access_dialog_deny_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_access_confirmation_deny"
            android:clipToOutline="true"
            style="?attr/permissionGrantButtonBottomStyle"/>
    </LinearLayout>
</LinearLayout>
