<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.DeviceDefault.DayNight"
    android:gravity="center_vertical"
    android:background="@drawable/immersive_cling_bg"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/immersive_cling_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_swipe_down"
        android:scaleType="fitXY"
        android:tint="?android:attr/colorAccent"
        android:layout_centerHorizontal="true"
        android:tintMode="src_in"/>
    <TextView
        android:textSize="24sp"
        android:textColor="?android:^attr-private/materialColorOnSurface"
        android:gravity="center_horizontal"
        android:id="@+id/immersive_cling_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/immersive_cling_title"
        android:layout_below="@+id/immersive_cling_icon"
        android:fontFamily="google-sans"/>
    <TextView
        android:textSize="14sp"
        android:textColor="?android:^attr-private/materialColorOnSurfaceVariant"
        android:gravity="center_horizontal"
        android:id="@+id/immersive_cling_description"
        android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/immersive_cling_description"
        android:layout_below="@+id/immersive_cling_title"
        android:fontFamily="google-sans"/>
    <Button
        android:textSize="14sp"
        android:textColor="?android:^attr-private/materialColorOnPrimary"
        android:id="@+id/ok"
        android:background="@drawable/immersive_cling_btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/immersive_cling_positive"
        android:layout_below="@+id/immersive_cling_description"
        android:textAllCaps="false"
        android:fontFamily="google-sans"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_alignParentEnd="true"
        android:textFontWeight="500"
        style="@android:style/Widget.Material.Button.Borderless.Colored"/>
</RelativeLayout>
