<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/privacy_dialog_title"
                android:fontFamily="@android:string/config_inCallNotificationSound"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:^attr-private/materialColorOnSurfaceVariant"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/privacy_dialog_summary"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/privacy_dialog_items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/button_layout"
            android:focusable="false"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">
            <LinearLayout
                android:layout_gravity="start|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/privacy_dialog_more_button"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_dialog_more_button"
                    android:maxLines="1"
                    style="@style/Widget.Dialog.Button.BorderButton"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/privacy_dialog_close_button"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_dialog_done_button"
                    android:maxLines="1"
                    style="@style/Widget.Dialog.Button.BorderButton"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
