<?xml version="1.0" encoding="utf-8"?>
<com.android.wm.shell.compatui.LetterboxEduDialogLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" style="@style/LetterboxDialog">
    <FrameLayout
        android:id="@+id/letterbox_education_dialog_container"
        android:background="@drawable/letterbox_education_dialog_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginHorizontal="@dimen/letterbox_education_dialog_margin"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/letterbox_education_dialog_width">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/letterbox_education_dialog_title_icon_width"
                    android:layout_height="@dimen/letterbox_education_dialog_title_icon_height"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/letterbox_education_ic_light_bulb"/>
                <TextView
                    android:textSize="24sp"
                    android:textColor="?android:^attr-private/materialColorOnSurface"
                    android:id="@+id/letterbox_education_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/letterbox_education_dialog_title"
                    android:lineSpacingExtra="4sp"
                    android:fontFamily="@android:string/config_inCallNotificationSound"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginVertical="@dimen/letterbox_education_dialog_margin">
                    <com.android.wm.shell.compatui.LetterboxEduDialogActionLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/letterbox_education_ic_reposition"
                        app:text="@string/letterbox_education_reposition_text"/>
                    <com.android.wm.shell.compatui.LetterboxEduDialogActionLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/letterbox_education_dialog_space_between_actions"
                        app:icon="@drawable/letterbox_education_ic_split_screen"
                        app:text="@string/letterbox_education_split_screen_text"/>
                </LinearLayout>
                <Button
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="14sp"
                    android:textColor="?android:^attr-private/materialColorOnPrimary"
                    android:id="@+id/letterbox_education_dialog_dismiss_button"
                    android:background="@drawable/letterbox_education_dismiss_button_background_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/letterbox_education_got_it"
                    android:contentDescription="@string/letterbox_education_got_it"
                    android:fontFamily="@android:string/config_carrierAppInstallDialogComponent"
                    android:textAlignment="center"
                    android:fontWeight="500"
                    android:lineHeight="20dp"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</com.android.wm.shell.compatui.LetterboxEduDialogLayout>
